campaign alignment bug

--- a/src/components/CampaignsDetail/campaignsDetail.module.css
+++ b/src/components/CampaignsDetail/campaignsDetail.module.css
@@ -1,8 +1,7 @@
 .container {
-    max-width: 345px;
-    max-height: 400px;
+    max-width: 450px;
+    max-height: 430px;
     width: 100%;
-    height: auto;
     margin-top: 20px;
     margin-right: 10px;
     
@@ -18,3 +17,9 @@
 .cardImage {
     height: 140px;
 }
+@media only screen and (max-width: 700px) {
+    .container {
+        margin: 10px;    
+    }
+   
+  }
