--- a/src/views/Campaigns/campaigns.module.css
+++ b/src/views/Campaigns/campaigns.module.css
@@ -1,7 +1,8 @@
 .container {
   display: flex;
+  justify-content: center;
   margin: 0 auto;
   flex-wrap: wrap;
   padding-bottom: 40px;
-  width: 80%;
+  width: 90%;
 }
